AndroidUtilities direkt in projekt eingebunden
CropImage begonnen

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,3 @@
 include ':app'
+include ':AndroidUtilities'
+project(':AndroidUtilities').projectDir = file('C:\\Users\\flas008\\AndroidStudioProjects\\AndroidUtilities\\androidUtilities')
