--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,7 +53,9 @@ dependencies {
     implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
 
     // Eigene
-    implementation 'com.github.FinnFlaschka1504:AndroidUtilities:3.6.2'
+    implementation project(':AndroidUtilities')
+
+//    implementation 'com.github.FinnFlaschka1504:AndroidUtilities:3.6.5'
 
     implementation 'com.github.duanhong169:drawabletoolbox:1.0.7'
     implementation "androidx.browser:browser:1.3.0"
@@ -80,6 +82,7 @@ dependencies {
     implementation 'com.github.jakebonk:DraggableTreeView:1.0.1'
     implementation 'com.quiph.ui:recyclerviewfastscroller:1.0.0'
     implementation 'com.github.pchmn:MaterialChipsInput:1.0.8'
+    api 'com.theartofdev.edmodo:android-image-cropper:2.8.+'
 
     implementation group: 'org.apache-extras.beanshell', name: 'bsh', version: '2.0b6'
     implementation group: 'com.google.guava', name: 'guava', version: '28.2-android'
