--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,31 +24,26 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoTitle"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".Activities.Content.Media.MediaEventActivity"></activity>
+        <activity android:name=".Activities.Content.Media.MediaEventActivity"
+            android:parentActivityName=".Activities.Main.MainActivity"
+            android:configChanges="orientation|screenSize"/>
         <activity
             android:name=".Activities.Content.Media.VideoPlayerActivity"
+            android:parentActivityName=".Activities.Content.Media.MediaActivity"
             android:configChanges="orientation|screenSize" />
+        <activity android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
+            android:theme="@style/Base.Theme.AppCompat"/>
         <activity
             android:name=".Activities.Content.Media.MediaActivity"
             android:configChanges="orientation|screenSize"
             android:parentActivityName=".Activities.Main.MainActivity"
             android:theme="@style/AppTheme.NoTitle">
-
-            <!-- <intent-filter -->
-            <!-- android:icon="@drawable/ic_media" -->
-            <!-- android:label="Medium hinzufügen"> -->
-            <!-- <action android:name="android.intent.action.SEND" /> -->
-            <!-- <category android:name="android.intent.category.DEFAULT" /> -->
-            <!-- <data android:mimeType="image/* video/*" /> -->
-            <!-- </intent-filter> -->
             <intent-filter
                 android:icon="@drawable/ic_media"
                 android:label="Medien hinzufügen">
                 <action android:name="android.intent.action.SEND" />
                 <action android:name="android.intent.action.SEND_MULTIPLE" />
-
                 <category android:name="android.intent.category.DEFAULT" />
-
                 <data android:mimeType="image/* video/*" />
             </intent-filter>
         </activity>
@@ -78,9 +73,7 @@
                 android:icon="@drawable/ic_videos"
                 android:label="Video hinzufügen">
                 <action android:name="android.intent.action.SEND" />
-
                 <category android:name="android.intent.category.DEFAULT" />
-
                 <data android:mimeType="text/*" />
             </intent-filter>
         </activity>
@@ -103,9 +96,7 @@
                 android:icon="@drawable/ic_knowledge"
                 android:label="Quelle hinzufügen">
                 <action android:name="android.intent.action.SEND" />
-
                 <category android:name="android.intent.category.DEFAULT" />
-
                 <data android:mimeType="text/*" />
             </intent-filter>
         </activity>
