--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,3 @@
 include ':app'
 include ':AndroidUtilities'
-project(':AndroidUtilities').projectDir = file('C:\\Users\\flas008\\AndroidStudioProjects\\AndroidUtilities\\androidUtilities')
+project(':AndroidUtilities').projectDir = file('C:\\Users\\FLAS008\\StudioProjects\\AndroidUtilities\\AndroidUtilities')
